security.tf
resource "aws_security_group" "sg" {
  name        = "devops-sg"
  description = "Allow SSH, HTTP, Jenkins"
  vpc_id = aws_vpc.main.id

# Allow SSH (Port 22) so I can log in
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

# Allow Jenkins (Port 8080) for the GitHub Webhook
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

# Allow Web Traffic (Port 80) for your App
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
# allows EC2 to access internet
  egress {
  from_port   = 0
  to_port     = 0
  protocol    = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}

}
